# libfml

./: CMakeLists.txt  LICENSE  README.md
include/fml/: curve.h  fml.h  manifold.h  quat.h  surface.h  vec2.h  vec3.h
src/: curve.cpp  quat.cpp  surface.cpp  vec2.cpp  vec3.cpp
